--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Koren · 个人主页</title>
-    <meta name="description" content="Koren's personal homepage" />
+    <meta name="color-scheme" content="light dark" />
+    <title>Koren · iOS / Flutter 开发者 · 个人主页</title>
+    <meta name="description" content="iOS & Flutter 工程师，产品导向、热爱日式美学与空间改造。这里是 Koren 的作品与项目精选。" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Noto+Sans+SC:wght@400;500;700&display=swap" rel="stylesheet">
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Koren",
+        "jobTitle": "iOS / Flutter Engineer",
+        "url": "https://koren-a11y.github.io/personal-homepage",
+        "sameAs": [
+          "https://github.com/Koren-a11y"
+        ],
+        "description": "Product-minded mobile engineer who values aesthetics and craftsmanship."
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
