--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!doctype html>
-<html lang="zh-CN">
+<html lang="ja">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="light dark" />
-    <title>Koren · iOS / Flutter 开发者 · 个人主页</title>
-    <meta name="description" content="iOS & Flutter 工程师，产品导向、热爱日式美学与空间改造。这里是 Koren 的作品与项目精选。" />
+  <title>Koren · iOS / Flutter エンジニア · ポートフォリオ</title>
+  <meta name="description" content="iOS / Flutter エンジニア。日本的な美学と空間づくりが好き。プロダクト志向で結果にこだわるポートフォリオ。" />
+  <link rel="alternate" href="https://koren-a11y.github.io/personal-homepage/?lang=ja" hreflang="ja" />
+  <link rel="alternate" href="https://koren-a11y.github.io/personal-homepage/?lang=zh" hreflang="zh" />
+  <link rel="alternate" href="https://koren-a11y.github.io/personal-homepage/?lang=en" hreflang="en" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Noto+Sans+SC:wght@400;500;700&display=swap" rel="stylesheet">
@@ -20,7 +23,9 @@
         "sameAs": [
           "https://github.com/Koren-a11y"
         ],
-        "description": "Product-minded mobile engineer who values aesthetics and craftsmanship."
+  "description": "Product-minded mobile engineer who values aesthetics and craftsmanship.",
+  "knowsAbout": ["iOS", "Flutter", "Mobile Architecture", "Accessibility"],
+  "inLanguage": ["ja", "zh", "en"]
       }
     </script>
   </head>
